hw16/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  annotations:
    kubernetes.io/ingress.class          : nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw-service
              port:
                number: 80
